// Copyright 2019 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// THIS FILE IS AUTOMATICALLY GENERATED.

package server

import (
	"context"
	"crypto/tls"
	"crypto/x509"
	"errors"
	"fmt"
	"io/ioutil"
	"net"
	"sync"

	proto "github.com/gogo/protobuf/types"
	"github.com/spf13/cobra"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials"

	adptModel "istio.io/api/mixer/adapter/model/v1beta1"
	"istio.io/api/policy/v1beta1"
	noop "istio.io/istio/mixer/adapter/noop"
	"istio.io/istio/mixer/pkg/adapter"
	"istio.io/istio/mixer/pkg/pool"
	"istio.io/istio/mixer/pkg/runtime/handler"
	"istio.io/istio/mixer/template/authorization"
	"istio.io/istio/mixer/template/checknothing"
	"istio.io/istio/mixer/template/listentry"
	"istio.io/istio/mixer/template/logentry"
	"istio.io/istio/mixer/template/metric"
	"istio.io/istio/mixer/template/quota"
	"istio.io/istio/mixer/template/reportnothing"
	"istio.io/istio/mixer/template/tracespan"
)

type (
	// Server is basic server interface
	Server interface {
		Addr() string
		Close() error
		Run()
	}

	// NoSession models nosession adapter backend.
	NoSession struct {
		listener net.Listener
		shutdown chan error
		server   *grpc.Server

		builder     adapter.HandlerBuilder
		env         adapter.Env
		builderLock sync.RWMutex
		handlerMap  map[string]adapter.Handler
	}

	// Cert includes cert config for adapter server
	Cert struct {
		credentialFile    string
		privateKeyFile    string
		caCertificateFile string
		enableTLS         bool
		requireClientAuth bool
	}
)

// DefaultCertOption return default cert option for adapter service
func DefaultCertOption() *Cert {
	return &Cert{
		credentialFile:    "/etc/certs/cert-chain.pem",
		privateKeyFile:    "/etc/certs/key.pem",
		caCertificateFile: "/etc/certs/root-cert.pem",
		enableTLS:         false,
		requireClientAuth: false,
	}
}

// AttachCobraFlags attach certs related flags.
func (c *Cert) AttachCobraFlags(cmd *cobra.Command) {
	cmd.PersistentFlags().StringVarP(&c.credentialFile, "certFile", "", c.credentialFile,
		"The location of the certificate file for TLS")
	cmd.PersistentFlags().StringVarP(&c.privateKeyFile, "keyFile", "", c.privateKeyFile,
		"The location of the key file for TLS")
	cmd.PersistentFlags().StringVarP(&c.caCertificateFile, "caCertFile", "", c.caCertificateFile,
		"The location of the certificate file for the root certificate authority")
	cmd.PersistentFlags().BoolVarP(&c.enableTLS, "enableTLS", "", c.enableTLS,
		"")
	cmd.PersistentFlags().BoolVarP(&c.requireClientAuth, "requireClientAuth", "", c.requireClientAuth,
		"")
}

var _ metric.HandleMetricServiceServer = &NoSession{}
var _ logentry.HandleLogEntryServiceServer = &NoSession{}
var _ reportnothing.HandleReportNothingServiceServer = &NoSession{}
var _ authorization.HandleAuthorizationServiceServer = &NoSession{}
var _ checknothing.HandleCheckNothingServiceServer = &NoSession{}
var _ listentry.HandleListEntryServiceServer = &NoSession{}
var _ quota.HandleQuotaServiceServer = &NoSession{}
var _ tracespan.HandleTraceSpanServiceServer = &NoSession{}

func (s *NoSession) updateHandlers(rawcfg []byte) (adapter.Handler, error) {

	if ce := s.builder.Validate(); ce != nil {
		return nil, ce
	}

	h, err := s.builder.Build(context.Background(), s.env)
	if err != nil {
		s.env.Logger().Errorf("could not build: %v", err)
		return nil, err
	}
	s.handlerMap[string(rawcfg)] = h
	return h, nil
}

func (s *NoSession) getMetricHandler(rawcfg []byte) (metric.Handler, error) {
	s.builderLock.RLock()
	if handler, ok := s.handlerMap[string(rawcfg)]; ok {
		h := handler.(metric.Handler)
		s.builderLock.RUnlock()
		return h, nil
	}
	s.builderLock.RUnlock()
	h, err := s.updateHandlers(rawcfg)
	if err != nil {
		return nil, err
	}

	// establish session
	return h.(metric.Handler), nil
}

func (s *NoSession) getLogEntryHandler(rawcfg []byte) (logentry.Handler, error) {
	s.builderLock.RLock()
	if handler, ok := s.handlerMap[string(rawcfg)]; ok {
		h := handler.(logentry.Handler)
		s.builderLock.RUnlock()
		return h, nil
	}
	s.builderLock.RUnlock()
	h, err := s.updateHandlers(rawcfg)
	if err != nil {
		return nil, err
	}

	// establish session
	return h.(logentry.Handler), nil
}

func (s *NoSession) getReportNothingHandler(rawcfg []byte) (reportnothing.Handler, error) {
	s.builderLock.RLock()
	if handler, ok := s.handlerMap[string(rawcfg)]; ok {
		h := handler.(reportnothing.Handler)
		s.builderLock.RUnlock()
		return h, nil
	}
	s.builderLock.RUnlock()
	h, err := s.updateHandlers(rawcfg)
	if err != nil {
		return nil, err
	}

	// establish session
	return h.(reportnothing.Handler), nil
}

func (s *NoSession) getAuthorizationHandler(rawcfg []byte) (authorization.Handler, error) {
	s.builderLock.RLock()
	if handler, ok := s.handlerMap[string(rawcfg)]; ok {
		h := handler.(authorization.Handler)
		s.builderLock.RUnlock()
		return h, nil
	}
	s.builderLock.RUnlock()
	h, err := s.updateHandlers(rawcfg)
	if err != nil {
		return nil, err
	}

	// establish session
	return h.(authorization.Handler), nil
}

func (s *NoSession) getCheckNothingHandler(rawcfg []byte) (checknothing.Handler, error) {
	s.builderLock.RLock()
	if handler, ok := s.handlerMap[string(rawcfg)]; ok {
		h := handler.(checknothing.Handler)
		s.builderLock.RUnlock()
		return h, nil
	}
	s.builderLock.RUnlock()
	h, err := s.updateHandlers(rawcfg)
	if err != nil {
		return nil, err
	}

	// establish session
	return h.(checknothing.Handler), nil
}

func (s *NoSession) getListEntryHandler(rawcfg []byte) (listentry.Handler, error) {
	s.builderLock.RLock()
	if handler, ok := s.handlerMap[string(rawcfg)]; ok {
		h := handler.(listentry.Handler)
		s.builderLock.RUnlock()
		return h, nil
	}
	s.builderLock.RUnlock()
	h, err := s.updateHandlers(rawcfg)
	if err != nil {
		return nil, err
	}

	// establish session
	return h.(listentry.Handler), nil
}

func (s *NoSession) getQuotaHandler(rawcfg []byte) (quota.Handler, error) {
	s.builderLock.RLock()
	if handler, ok := s.handlerMap[string(rawcfg)]; ok {
		h := handler.(quota.Handler)
		s.builderLock.RUnlock()
		return h, nil
	}
	s.builderLock.RUnlock()
	h, err := s.updateHandlers(rawcfg)
	if err != nil {
		return nil, err
	}

	// establish session
	return h.(quota.Handler), nil
}

func (s *NoSession) getTraceSpanHandler(rawcfg []byte) (tracespan.Handler, error) {
	s.builderLock.RLock()
	if handler, ok := s.handlerMap[string(rawcfg)]; ok {
		h := handler.(tracespan.Handler)
		s.builderLock.RUnlock()
		return h, nil
	}
	s.builderLock.RUnlock()
	h, err := s.updateHandlers(rawcfg)
	if err != nil {
		return nil, err
	}

	// establish session
	return h.(tracespan.Handler), nil
}

// nolint:deadcode
func transformauthorizationSubjectMsg(inst *authorization.SubjectMsg) *authorization.Subject {
	return &authorization.Subject{

		User:       inst.User,
		Groups:     inst.Groups,
		Properties: transformValueMap(inst.Properties),
	}
}

// nolint:deadcode
func transformauthorizationSubjectMsgSlice(insts []*authorization.SubjectMsg) []*authorization.Subject {
	ret := make([]*authorization.Subject, 0, len(insts))
	for _, inst := range insts {
		ret = append(ret, transformauthorizationSubjectMsg(inst))
	}
	return ret
}

// nolint:deadcode
func transformauthorizationSubjectMsgMap(insts map[string]*authorization.SubjectMsg) map[string]*authorization.Subject {
	ret := make(map[string]*authorization.Subject)
	for k, inst := range insts {
		ret[k] = transformauthorizationSubjectMsg(inst)
	}
	return ret
}

// nolint:deadcode
func transformauthorizationActionMsg(inst *authorization.ActionMsg) *authorization.Action {
	return &authorization.Action{

		Namespace:  inst.Namespace,
		Service:    inst.Service,
		Method:     inst.Method,
		Path:       inst.Path,
		Properties: transformValueMap(inst.Properties),
	}
}

// nolint:deadcode
func transformauthorizationActionMsgSlice(insts []*authorization.ActionMsg) []*authorization.Action {
	ret := make([]*authorization.Action, 0, len(insts))
	for _, inst := range insts {
		ret = append(ret, transformauthorizationActionMsg(inst))
	}
	return ret
}

// nolint:deadcode
func transformauthorizationActionMsgMap(insts map[string]*authorization.ActionMsg) map[string]*authorization.Action {
	ret := make(map[string]*authorization.Action)
	for k, inst := range insts {
		ret[k] = transformauthorizationActionMsg(inst)
	}
	return ret
}

func metricInstances(in []*metric.InstanceMsg) []*metric.Instance {
	out := make([]*metric.Instance, 0, len(in))

	for _, inst := range in {
		out = append(out, &metric.Instance{
			Name: inst.Name,

			Value:                       transformValue(inst.Value.GetValue()),
			Dimensions:                  transformValueMap(inst.Dimensions),
			MonitoredResourceType:       inst.MonitoredResourceType,
			MonitoredResourceDimensions: transformValueMap(inst.MonitoredResourceDimensions),
		})
	}
	return out
}

func logentryInstances(in []*logentry.InstanceMsg) []*logentry.Instance {
	out := make([]*logentry.Instance, 0, len(in))

	for _, inst := range in {
		tmpTimestamp, err := proto.TimestampFromProto(inst.Timestamp.GetValue())
		if err != nil {
			continue
		}
		out = append(out, &logentry.Instance{
			Name: inst.Name,

			Variables:                   transformValueMap(inst.Variables),
			Timestamp:                   tmpTimestamp,
			Severity:                    inst.Severity,
			MonitoredResourceType:       inst.MonitoredResourceType,
			MonitoredResourceDimensions: transformValueMap(inst.MonitoredResourceDimensions),
		})
	}
	return out
}

func reportnothingInstances(in []*reportnothing.InstanceMsg) []*reportnothing.Instance {
	out := make([]*reportnothing.Instance, 0, len(in))

	for _, inst := range in {
		out = append(out, &reportnothing.Instance{
			Name: inst.Name,
		})
	}
	return out
}

func authorizationInstance(inst *authorization.InstanceMsg) *authorization.Instance {
	return &authorization.Instance{
		Name: inst.Name,

		Subject: transformauthorizationSubjectMsg(inst.Subject),
		Action:  transformauthorizationActionMsg(inst.Action),
	}
}

func checknothingInstance(inst *checknothing.InstanceMsg) *checknothing.Instance {
	return &checknothing.Instance{
		Name: inst.Name,
	}
}

func listentryInstance(inst *listentry.InstanceMsg) *listentry.Instance {
	return &listentry.Instance{
		Name: inst.Name,

		Value: transformValue(inst.Value.GetValue()),
	}
}

func quotaInstance(inst *quota.InstanceMsg) *quota.Instance {
	return &quota.Instance{
		Name: inst.Name,

		Dimensions: transformValueMap(inst.Dimensions),
	}
}

func tracespanInstances(in []*tracespan.InstanceMsg) []*tracespan.Instance {
	out := make([]*tracespan.Instance, 0, len(in))

	for _, inst := range in {
		tmpStartTime, err := proto.TimestampFromProto(inst.StartTime.GetValue())
		if err != nil {
			continue
		}
		tmpEndTime, err := proto.TimestampFromProto(inst.EndTime.GetValue())
		if err != nil {
			continue
		}
		out = append(out, &tracespan.Instance{
			Name: inst.Name,

			TraceId:             inst.TraceId,
			SpanId:              inst.SpanId,
			ParentSpanId:        inst.ParentSpanId,
			SpanName:            inst.SpanName,
			StartTime:           tmpStartTime,
			EndTime:             tmpEndTime,
			SpanTags:            transformValueMap(inst.SpanTags),
			HttpStatusCode:      inst.HttpStatusCode,
			ClientSpan:          inst.ClientSpan,
			RewriteClientSpanId: inst.RewriteClientSpanId,
			SourceName:          inst.SourceName,
			SourceIp:            inst.SourceIp.Value,
			DestinationName:     inst.DestinationName,
			DestinationIp:       inst.DestinationIp.Value,
			RequestSize:         inst.RequestSize,
			RequestTotalSize:    inst.RequestTotalSize,
			ResponseSize:        inst.ResponseSize,
			ResponseTotalSize:   inst.ResponseTotalSize,
			ApiProtocol:         inst.ApiProtocol,
		})
	}
	return out
}

// nolint:deadcode
func transformValueMap(in map[string]*v1beta1.Value) map[string]interface{} {
	out := make(map[string]interface{}, len(in))
	for k, v := range in {
		out[k] = transformValue(v.GetValue())
	}
	return out
}

// nolint:deadcode
func transformValueSlice(in []interface{}) []interface{} {
	out := make([]interface{}, 0, len(in))
	for _, inst := range in {
		out = append(out, transformValue(inst))
	}
	return out
}

func transformValue(in interface{}) interface{} {
	switch t := in.(type) {
	case *v1beta1.Value_StringValue:
		return t.StringValue
	case *v1beta1.Value_Int64Value:
		return t.Int64Value
	case *v1beta1.Value_DoubleValue:
		return t.DoubleValue
	case *v1beta1.Value_BoolValue:
		return t.BoolValue
	case *v1beta1.Value_IpAddressValue:
		return t.IpAddressValue.Value
	case *v1beta1.Value_EmailAddressValue:
		return t.EmailAddressValue.Value
	case *v1beta1.Value_UriValue:
		return t.UriValue.Value
	default:
		return fmt.Sprintf("%v", in)
	}
}

// HandleMetric handles 'Metric' instances.
func (s *NoSession) HandleMetric(ctx context.Context, r *metric.HandleMetricRequest) (*adptModel.ReportResult, error) {
	if r.AdapterConfig == nil {
		return nil, errors.New("adapter config cannot be empty")
	}
	h, err := s.getMetricHandler(r.AdapterConfig.Value)
	if err != nil {
		return nil, err
	}

	if err = h.HandleMetric(ctx, metricInstances(r.Instances)); err != nil {
		s.env.Logger().Errorf("Could not process: %v", err)
		return nil, err
	}

	return &adptModel.ReportResult{}, nil
}

// HandleLogEntry handles 'LogEntry' instances.
func (s *NoSession) HandleLogEntry(ctx context.Context, r *logentry.HandleLogEntryRequest) (*adptModel.ReportResult, error) {
	if r.AdapterConfig == nil {
		return nil, errors.New("adapter config cannot be empty")
	}
	h, err := s.getLogEntryHandler(r.AdapterConfig.Value)
	if err != nil {
		return nil, err
	}

	if err = h.HandleLogEntry(ctx, logentryInstances(r.Instances)); err != nil {
		s.env.Logger().Errorf("Could not process: %v", err)
		return nil, err
	}

	return &adptModel.ReportResult{}, nil
}

// HandleReportNothing handles 'ReportNothing' instances.
func (s *NoSession) HandleReportNothing(ctx context.Context, r *reportnothing.HandleReportNothingRequest) (*adptModel.ReportResult, error) {
	if r.AdapterConfig == nil {
		return nil, errors.New("adapter config cannot be empty")
	}
	h, err := s.getReportNothingHandler(r.AdapterConfig.Value)
	if err != nil {
		return nil, err
	}

	if err = h.HandleReportNothing(ctx, reportnothingInstances(r.Instances)); err != nil {
		s.env.Logger().Errorf("Could not process: %v", err)
		return nil, err
	}

	return &adptModel.ReportResult{}, nil
}

// HandleAuthorization handles 'Authorization' instances.
func (s *NoSession) HandleAuthorization(ctx context.Context, r *authorization.HandleAuthorizationRequest) (*adptModel.CheckResult, error) {
	if r.AdapterConfig == nil {
		return nil, errors.New("adapter config cannot be empty")
	}
	h, err := s.getAuthorizationHandler(r.AdapterConfig.Value)
	if err != nil {
		return nil, err
	}
	inst := authorizationInstance(r.Instance)
	if inst == nil {
		return nil, fmt.Errorf("cannot transform instance")
	}
	cr, err := h.HandleAuthorization(ctx, inst)
	if err != nil {
		s.env.Logger().Errorf("Could not process: %v", err)
		return nil, err
	}
	return &adptModel.CheckResult{
		Status:        cr.Status,
		ValidDuration: cr.ValidDuration,
		ValidUseCount: cr.ValidUseCount,
	}, nil
}

// HandleCheckNothing handles 'CheckNothing' instances.
func (s *NoSession) HandleCheckNothing(ctx context.Context, r *checknothing.HandleCheckNothingRequest) (*adptModel.CheckResult, error) {
	if r.AdapterConfig == nil {
		return nil, errors.New("adapter config cannot be empty")
	}
	h, err := s.getCheckNothingHandler(r.AdapterConfig.Value)
	if err != nil {
		return nil, err
	}
	inst := checknothingInstance(r.Instance)
	if inst == nil {
		return nil, fmt.Errorf("cannot transform instance")
	}
	cr, err := h.HandleCheckNothing(ctx, inst)
	if err != nil {
		s.env.Logger().Errorf("Could not process: %v", err)
		return nil, err
	}
	return &adptModel.CheckResult{
		Status:        cr.Status,
		ValidDuration: cr.ValidDuration,
		ValidUseCount: cr.ValidUseCount,
	}, nil
}

// HandleListEntry handles 'ListEntry' instances.
func (s *NoSession) HandleListEntry(ctx context.Context, r *listentry.HandleListEntryRequest) (*adptModel.CheckResult, error) {
	if r.AdapterConfig == nil {
		return nil, errors.New("adapter config cannot be empty")
	}
	h, err := s.getListEntryHandler(r.AdapterConfig.Value)
	if err != nil {
		return nil, err
	}
	inst := listentryInstance(r.Instance)
	if inst == nil {
		return nil, fmt.Errorf("cannot transform instance")
	}
	cr, err := h.HandleListEntry(ctx, inst)
	if err != nil {
		s.env.Logger().Errorf("Could not process: %v", err)
		return nil, err
	}
	return &adptModel.CheckResult{
		Status:        cr.Status,
		ValidDuration: cr.ValidDuration,
		ValidUseCount: cr.ValidUseCount,
	}, nil
}

// HandleQuota handles 'Quota' instances.
func (s *NoSession) HandleQuota(ctx context.Context, r *quota.HandleQuotaRequest) (*adptModel.QuotaResult, error) {
	if r.AdapterConfig == nil {
		return nil, errors.New("adapter config cannot be empty")
	}
	h, err := s.getQuotaHandler(r.AdapterConfig.Value)
	if err != nil {
		return nil, err
	}

	qi := quotaInstance(r.Instance)
	resp := adptModel.QuotaResult{
		Quotas: make(map[string]adptModel.QuotaResult_Result),
	}
	for qt, p := range r.QuotaRequest.Quotas {
		qa := adapter.QuotaArgs{
			DeduplicationID: r.DedupId,
			QuotaAmount:     p.Amount,
			BestEffort:      p.BestEffort,
		}
		qr, err := h.HandleQuota(ctx, qi, qa)
		if err != nil {
			return nil, err
		}
		resp.Quotas[qt] = adptModel.QuotaResult_Result{
			ValidDuration: qr.ValidDuration,
			GrantedAmount: qr.Amount,
		}
	}
	if err != nil {
		s.env.Logger().Errorf("Could not process: %v", err)
		return nil, err
	}
	return &resp, nil
}

// HandleTraceSpan handles 'TraceSpan' instances.
func (s *NoSession) HandleTraceSpan(ctx context.Context, r *tracespan.HandleTraceSpanRequest) (*adptModel.ReportResult, error) {
	if r.AdapterConfig == nil {
		return nil, errors.New("adapter config cannot be empty")
	}
	h, err := s.getTraceSpanHandler(r.AdapterConfig.Value)
	if err != nil {
		return nil, err
	}

	if err = h.HandleTraceSpan(ctx, tracespanInstances(r.Instances)); err != nil {
		s.env.Logger().Errorf("Could not process: %v", err)
		return nil, err
	}

	return &adptModel.ReportResult{}, nil
}

// Addr returns the listening address of the server
func (s *NoSession) Addr() string {
	return s.listener.Addr().String()
}

// Run starts the server run
func (s *NoSession) Run() {
	s.shutdown = make(chan error, 1)
	go func() { //nolint:adapterlinter
		err := s.server.Serve(s.listener)

		// notify closer we're done
		s.shutdown <- err
	}()
}

// Wait waits for server to stop
func (s *NoSession) Wait() error {
	if s.shutdown == nil {
		return fmt.Errorf("server not running")
	}

	err := <-s.shutdown
	s.shutdown = nil
	return err
}

// Close gracefully shuts down the server
func (s *NoSession) Close() error {
	if s.shutdown != nil {
		s.server.GracefulStop()
		_ = s.Wait()
	}

	if s.listener != nil {
		_ = s.listener.Close()
	}

	return nil
}

func getServerTLSOption(c *Cert) (grpc.ServerOption, error) {
	certificate, err := tls.LoadX509KeyPair(
		c.credentialFile,
		c.privateKeyFile,
	)
	if err != nil {
		return nil, fmt.Errorf("failed to load key cert pair")
	}
	certPool := x509.NewCertPool()
	bs, err := ioutil.ReadFile(c.caCertificateFile)
	if err != nil {
		return nil, fmt.Errorf("failed to read client ca cert: %s", err)
	}

	ok := certPool.AppendCertsFromPEM(bs)
	if !ok {
		return nil, fmt.Errorf("failed to append client certs")
	}

	tlsConfig := &tls.Config{
		Certificates: []tls.Certificate{certificate},
		ClientCAs:    certPool,
	}
	if c.requireClientAuth {
		tlsConfig.ClientAuth = tls.RequireAndVerifyClientCert
	}

	return grpc.Creds(credentials.NewTLS(tlsConfig)), nil
}

// NewNoopNoSessionServer creates a new no session server based on given args.
func NewNoopNoSessionServer(addr uint16, poolSize int, c *Cert) (*NoSession, error) {
	saddr := fmt.Sprintf(":%d", addr)

	gp := pool.NewGoroutinePool(poolSize, false)
	inf := noop.GetInfo()
	s := &NoSession{
		builder:    inf.NewBuilder(),
		env:        handler.NewEnv(0, "noop-nosession", gp),
		handlerMap: make(map[string]adapter.Handler),
	}
	var err error
	if s.listener, err = net.Listen("tcp", saddr); err != nil {
		_ = s.Close()
		return nil, fmt.Errorf("unable to listen on socket: %v", err)
	}

	fmt.Printf("listening on :%v\n", s.listener.Addr())
	if c.enableTLS {
		so, err := getServerTLSOption(c)
		if err != nil {
			return nil, err
		}
		s.server = grpc.NewServer(so)
	} else {
		s.server = grpc.NewServer()
	}

	metric.RegisterHandleMetricServiceServer(s.server, s)
	logentry.RegisterHandleLogEntryServiceServer(s.server, s)
	reportnothing.RegisterHandleReportNothingServiceServer(s.server, s)
	authorization.RegisterHandleAuthorizationServiceServer(s.server, s)
	checknothing.RegisterHandleCheckNothingServiceServer(s.server, s)
	listentry.RegisterHandleListEntryServiceServer(s.server, s)
	quota.RegisterHandleQuotaServiceServer(s.server, s)
	tracespan.RegisterHandleTraceSpanServiceServer(s.server, s)

	return s, nil
}
